<resources>
    <string name="app_name">PETTRADING</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="descricao">Descrição:</string>
    <string name="categoria">Categoria:</string>
    <string name="doa_ou_venda">Doação:</string>
    <string name="dono">Dono:</string>
    <string name="ProfileName"></string>
    <string name="ProfileNameContact"></string>
    <string name="oops">Oops!</string>
    <string name="nas_configuracoes">Não foi encontrado novos pets proximos a você! Tente alterar a distancia nas configurações</string>

    <string name="configuracoes">Configurações</string>
    <string name="titleSettings">Configurações</string>
    <string name="cancel">Cancelar</string>
    <string name="Ok">Ok</string>
    <string name="distancia">Distancia</string>

    <string name="neighborhood">Pet\'s em seu bairro</string>
    <string name="city">Pet\'s em sua cidade</string>
    <string name="state">Pet\'s em seu estado</string>
    <string name="more_state">Pet\'s em regiões proximas a seu estado</string>
    <string name="all_country">Pet\'s em seu país</string>
    <string name="more_city">Pet\'s em regiões proximas a sua cidade</string>

    <!-- STRING PAINEL TERMO CONTRATO -->
    <string name="termos_de_uso_e_privacidade">
        <b>Termos de Uso e Privacidade</b>\n
        Condições de uso, política de privacidade e normas de publicação\n
        1. Definições\n
        2. Condições de acesso e uso do site\n
        3. Propriedade intelectual e industrial\n
        4. Exclusão de garantias e responsabilidade\n
        5. Política de privacidade\n
        6. Normas de publicação dos anúncios\n
        7. Vários\n
        8. Serviços "Topo", "Topo Semanal" e "Topo Diário"\n
        9. Serviço "Anúncio da Semana"\n
        10. Serviço "Galeria"\n
        11. Serviços "Banner"\n
        12. Serviço "Contas Premium"\n
        13. "Pacotes"\n
        14. "Galeria Premium"\n
    </string>
    <!-- FIM PAINEL TERMO CONTRATO -->



    <!-- STRING PAINEL AJUDA -->
    <string name="string_ajuda_dogcoin">
    Você pode obter DogCoin\'s visualizando os anuncios que disponibilizamos
    na guia \'\'Ganhe DogCoin\'s\'\'.
    </string>

    <string name="string_ajuda_buscarapida_anunciar">
    Para anunciar no Busca Rápida, você irá precisar de 10 DogCoin\'s, em seguida
    durante o cadastro de doações, marque a opção "Busca Rápida", e então será descontado
    o valor taxado ao concluir a doação anunciada.
    </string>

    <string name="string_ajuda_buscarapida_configurar">
    Para configurar a distancia da busca de doações, clique no botão \'\'configurações\'\'
    no menu da tela \'\'Busca Rápida\'\'.
    </string>

    <string name="string_ajuda_conta_alterarsenha">
    Para efetuar a alteração de troca de senha, você deverá ir na tela \'\'Conta\'\' e em seguida
    selecionar a opção \'\'alterar senha\'\'.
    </string>

    <string name="string_ajuda_conta_alterarnomeexibicao">
    Para alterar o seu nome de exibição, você deverar acessar a tela \'\'Conta\'\' e em seguida clicar
    em sua imagem de perfil, logo você encontrará o botão de \'\'alterar o seu nome de exibição\'\'.
    </string>

    <string name="string_ajuda_conta_imagem">
    Para alterar a sua imagem de perfil, você deverar acessar a tela \'\'Conta\'\' e em seguida clicar
    em sua imagem de perfil, e em seguida clicar novamente na imagem de perfil e selecionar a imagem
    desejada.
    </string>

    <!-- FIM PAINEL AJUDA -->



    <string name="idade">Idade:</string>


    <string-array name="categorias_pet">
        <item>Selecione a categoria</item>
        <item>Todos os pets</item>
        <item>Cães</item>
        <item>Gatos</item>
        <item>Tartarugas</item>
        <item>Roedores</item>
        <item>Répteis</item>
        <item>Outros tipos</item>
    </string-array>

    <string-array name="estados">
        <item>Selecionar o Estado</item>
        <item>São Paulo (SP)</item>
        <item>Rio de Janeiro (RJ)</item>
        <item>Acre (AC)</item>
        <item>Alagoas (AL)</item>
        <item>Amapá (AP)</item>
        <item>Amazonas (AM)</item>
        <item>Bahia (BA)</item>
        <item>Ceará (CE)</item>
        <item>Distrito Federal (DF)</item>
        <item>Espírito Santo (ES)</item>
        <item>Goiás (GO)</item>
        <item>Maranhão (MA)</item>
        <item>Mato Grosso (MT)</item>
        <item>Mato Grosso do Sul (MS)</item>
        <item>Minas Gerais (MG)</item>
        <item>Pará (PA)</item>
        <item>Paraíba (PB)</item>
        <item>Paraná (PR)</item>
        <item>Pernambuco (PE)</item>
        <item>Piauí (PI)</item>
        <item>Rio Grande do Norte (RN)</item>
        <item>Rio Grande do Sul (RS)</item>
        <item>Rondônia (RO)</item>
        <item>Roraima (RR)</item>
        <item>Santa Catarina (SC)</item>
        <item>Sergipe (SE)</item>
        <item>Tocantins (TO)</item>
    </string-array>

    <string name="hint_raca">Raça ou nome do Pet</string>
    <string name="hint_idade">Idade do Pet (Ex: 1 mês, 1 ano)</string>
    <string name="hint_valor">Doação</string>
    <string name="hint_descricao">Descrição</string>
    <string name="err_msg_raca">Preencha o campo corretamente</string>
    <string name="err_msg_idade">Preencha o campo corretamente</string>
    <string name="err_msg_valor">Preencha o campo corretamente</string>
    <string name="err_msg_descricao">Preencha o campo corretamente</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="refinarPesquisa">Refina a pesquisa</string>


</resources>