<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pet.com.br.pet.buscaRapida.InfoBuscaRapidaActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/layoutImage">

                        <ProgressBar
                            android:id="@+id/progressBar2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true" />

                        <ImageView
                        android:id="@+id/cardImage"
                        android:layout_width="match_parent"
                        android:layout_height="227dp"
                        android:padding="4dp"
                        android:scaleType="centerInside" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/LinearNomes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:gravity="top"
                        android:orientation="vertical"
                        android:layout_below="@id/layoutImage">

                        <TextView
                            android:id="@+id/raca"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="New Text"
                            android:textSize="28sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/idade"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="New Text" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/LinearNomes"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fillViewport="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:baselineAligned="false"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/descricao"
                                    android:id="@+id/textView3" />

                                <TextView
                                    android:layout_marginTop="5dp"
                                    android:id="@+id/textInfo"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="New Text" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/categoria"
                                    android:layout_marginTop="14dp"
                                    android:id="@+id/textView4" />

                                <TextView
                                    android:layout_marginTop="5dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="New Text"
                                    android:id="@+id/textCategoria" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/doa_ou_venda"
                                    android:layout_marginTop="14dp"
                                    android:id="@+id/textView5" />

                                <TextView
                                    android:layout_marginTop="5dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="New Text"
                                    android:id="@+id/textVendaOuDoa" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/dono"
                                    android:layout_marginTop="14dp"
                                    android:id="@+id/textView6" />

                                <TextView
                                    android:layout_marginTop="5dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="New Text"
                                    android:id="@+id/textNome" />




                            </LinearLayout>
                        </ScrollView>


                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

 </ScrollView>

</RelativeLayout>
